delete the last exemple.

--- a/abs.html
+++ b/abs.html
@@ -31,6 +31,8 @@
 
         <section class="basic-ts-item basic-item">
             <h2 class="basic-item basic-title">Basic Info</h2>
+
+            <div class="bsic-item"></div>
             <section class="basic-item  basic-name">
                 <label class="basic-name  name-item">Name: *</label>
                 <input type="text" id="name" required>
@@ -60,6 +62,7 @@
         <section class="basic-ts-item ts-item">
 
             <h2 class="ts-item   ts-title">T-Shirt Info</h2>
+
             <section class="ts-item size-design">
                 <section class=" size-design size-box">
                     <label class="size-item size-title">Size:</label>
